<resources>
    <string name="app_name">SummerProject23</string>
    <string name="profile">Профиль</string>
    <string name="main">Главная</string>
    <string name="favorite">Избранное</string>
    <string name="search">Поиск</string>
    <string name="add">Добавить</string>
    <string name="sign_in">Вход</string>
    <string name="registration">Registration</string>
    <string name="sign_in">Зарегистрироваться</string>
    <string name="sign_up">Войти</string>
    <string name="text_name">Еда</string>
    <string name="step_id">Шаг %d:</string>
    <string name="step_example">Шаг 1</string>
    <string name="desc_example">Тщательно вымойте картошку и отварите ее в кожуре. За степенью готовностью необходимо следить, иначе картофель переварится и будет непригоден. Чтобы кожура не лопнула во время варки, можно проткнуть зубочисткой каждый корнеплод или добавить в кастрюлю с водой щепотку соли и каплю уксуса. Время варки — 20 минут. После снимите с огня, слейте кипяток, остудите и очистите от кожуры. А затем нарежьте на кубики.</string>
    <string name="ingredients">Ингредиенты</string>
    <string name="recipe_is_saved">Рецепт успешно сохранен!</string>
    <string name="recipe_added_to_favorite">Рецепт добавлен в избранное!</string>
    <string name="recipe_removed_from_favorite">Рецепт удален из избранного!</string>
    <string name="nothing_found">Ничего не найдено</string>
    <string name="hint_search">Найти рецепт</string>
    <string name="recipe_deleted">Рецепт удалён</string>
    <string name="no_text">No text</string>
    <string name="recipe_not_found">Ничего не найдено</string>
    <string name="need_all_data">Заполните все поля!</string>
    <string name="user_saved">Пользователь сохранен!</string>
    <string name="password">Пароль</string>
    <string name="email">Почта</string>
    <string name="username">Ваше имя</string>
    <string name="name">Название</string>
    <string name="description">Описание</string>
    <string name="url_photo">Ссылка на фото</string>
    <string name="register">Регистрация</string>
    <string name="done">Вход выполнен</string>
    <string name="no_user">Пользователь не найден</string>

</resources>