<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mainFragment"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/main" />

    <item
        android:id="@+id/searchFragment"
        android:checked="true"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search" />

    <item
        android:id="@+id/settingsFragment"
        android:checked="true"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/add" />

    <item
        android:id="@+id/notificationsFragment"
        android:checked="true"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/favorite" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile" />

</menu>